--- a/Hawaii/UI/Storyboard/History.storyboard
+++ b/Hawaii/UI/Storyboard/History.storyboard
@@ -19,16 +19,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Psb-gj-8sZ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="641"/>
+                                <rect key="frame" x="10" y="5" width="355" height="631"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.1960784314" green="0.1960784314" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Psb-gj-8sZ" firstAttribute="leading" secondItem="LbI-5p-nbN" secondAttribute="leading" id="3mt-sb-uoz"/>
+                            <constraint firstItem="Psb-gj-8sZ" firstAttribute="leading" secondItem="LbI-5p-nbN" secondAttribute="leading" constant="10" id="3mt-sb-uoz"/>
                             <constraint firstItem="Psb-gj-8sZ" firstAttribute="centerX" secondItem="LbI-5p-nbN" secondAttribute="centerX" id="7xj-x7-anW"/>
                             <constraint firstItem="Psb-gj-8sZ" firstAttribute="centerY" secondItem="LbI-5p-nbN" secondAttribute="centerY" id="8WA-Lw-JIt"/>
-                            <constraint firstItem="Psb-gj-8sZ" firstAttribute="top" secondItem="LbI-5p-nbN" secondAttribute="top" id="MHL-I7-HQT"/>
+                            <constraint firstItem="Psb-gj-8sZ" firstAttribute="top" secondItem="LbI-5p-nbN" secondAttribute="top" constant="5" id="MHL-I7-HQT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LbI-5p-nbN"/>
                     </view>
